feat: add works section

--- a/src/style/generic.scss
+++ b/src/style/generic.scss
@@ -27,6 +27,15 @@
     }
 }
 
+h1 {
+    font-size: 3rem;
+    font-weight: 600;
+}
+
+h4 {
+    font-weight: 600;
+}
+
 .ms-btn {
     border: 1px solid white;
     border-radius: 50px;
