--- a/src/style/generic.scss
+++ b/src/style/generic.scss
@@ -1,6 +1,6 @@
 @import"node_modules/bootstrap/scss/bootstrap";
 
-* {
+body {
     font-family: "Chakra Petch", sans-serif;
     font-weight: 500;
     font-style: normal;
