--- a/src/style/generic.scss
+++ b/src/style/generic.scss
@@ -1,3 +1,4 @@
+@use './partials/variables.scss' as *;
 @import"node_modules/bootstrap/scss/bootstrap";
 
 body {
@@ -58,6 +59,10 @@ h4 {
     padding: 1.5rem;
     border-radius: 50px;
     color: gray;
+
+    &:hover {
+        background-color: $brand-secondary;
+    }
 
     i {
         position: absolute;
